--- a/templates/invitation/index.html.twig
+++ b/templates/invitation/index.html.twig
@@ -33,7 +33,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="{{ path('invitation_edit', {'id': invitation.id}) }}" class="btn btn-sm btn-secondary">Modifier</a>
+                    <a href="#" class="btn btn-sm btn-secondary">Modifier</a>
                 </td>
             </tr>
         {% else %}
