--- a/templates/invitation/new.html.twig
+++ b/templates/invitation/new.html.twig
@@ -9,6 +9,11 @@
         <div class="card">
             <div class="card-body">
                 {{ form_start(form) }}
+                <div class="mb-3">
+                    {{ form_label(form.name) }}
+                    {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.name) }}
+                </div>
                     <div class="mb-3">
                         {{ form_label(form.email) }}
                         {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
@@ -16,14 +21,14 @@
                     </div>
                     
                     <button type="submit" class="btn btn-primary">
-                        {{ form_widget(form.envoyer) }}
+                       Envoyer
                     </button>
                 {{ form_end(form) }}
             </div>
         </div>
         
         <div class="mt-3">
-            <a href="{{ path('invitation_list') }}" class="btn btn-outline-secondary">
+            <a href="{{ path('invitation_index') }}" class="btn btn-outline-secondary">
                 Retour à la liste
             </a>
         </div>
