--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,9 +67,10 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="{{ path('event_create') }}">
-                                        <i class="fas fa-calendar-plus me-2"></i> Créer un Événement
+                                    <a class="dropdown-item" href="{{ path('event_index') }}">
+                                        <i class="fas fa-list me-2"></i> Liste des Événements
                                     </a>
+
                                 </li>
                             {% endif %}
 
